; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-db/extr_query.c_query_is_eot.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-db/extr_query.c_query_is_eot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buffer = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i64)* @query_is_eot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @query_is_eot(i32 %0, i64 %1) #0 {
  %3 = alloca %struct.buffer, align 8
  %4 = bitcast %struct.buffer* %3 to { i32, i64 }*
  %5 = getelementptr inbounds { i32, i64 }, { i32, i64 }* %4, i32 0, i32 0
  store i32 %0, i32* %5, align 8
  %6 = getelementptr inbounds { i32, i64 }, { i32, i64 }* %4, i32 0, i32 1
  store i64 %1, i64* %6, align 8
  %7 = getelementptr inbounds %struct.buffer, %struct.buffer* %3, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = trunc i64 %8 to i32
  %10 = getelementptr inbounds %struct.buffer, %struct.buffer* %3, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = icmp uge i32 %9, %11
  %13 = zext i1 %12 to i32
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
